[metadata]
name = lisa2
version = attr: lisa.__version__
description = Lisa: inferring transcriptional regulators through integrative modeling of public chromatin accessibility and ChIP-seq data. X. Shirley Liu Lab, 2020
url = https://genomebiology.biomedcentral.com/articles/10.1186/s13059-020-1934-6
long_description = file: README.rst
license = BSD3 License
classifiers =
    License :: OSI Approved :: BSD License
    Environment :: Console
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.5


[options]
zip_safe = True
include_package_data = True
packages = find:
python_requires = >=3.5
install_requires =
    numpy>=1.17,<2
    scipy>=1.4,<2
    h5py>=2
    scikit-learn>=0.22,<1

[options.extras_require]
coverage = pyBigWig>=0.3,<1

[options.package_data]
lisa = *.ini, data
lisa.genomes = *

[options.entry_points]
console_scripts =
    lisa = lisa.cli.cli:main

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    miscdocs*